RESOLVED FIXED90194
[V8] NodeList wrappers are not kept alive as needed
https://bugs.webkit.org/show_bug.cgi?id=90194
Summary [V8] NodeList wrappers are not kept alive as needed
Erik Arvidsson
Reported 2012-06-28 11:55:16 PDT
[V8] NodeList wrappers are not kept alive as needed
Attachments
Patch (4.47 KB, patch)
2012-06-28 11:59 PDT, Erik Arvidsson
no flags
Patch (6.59 KB, patch)
2012-06-28 14:35 PDT, Erik Arvidsson
no flags
Patch for landing (6.52 KB, patch)
2012-06-28 15:32 PDT, Erik Arvidsson
no flags
Erik Arvidsson
Comment 1 2012-06-28 11:59:29 PDT
Ojan Vafai
Comment 2 2012-06-28 12:08:10 PDT
Comment on attachment 149982 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=149982&action=review > Source/WebCore/bindings/v8/custom/V8NodeListCustom.cpp:70 > + v8::Persistent<v8::Object> ownerWrapper = store->domNodeMap().get(owner); > + if (!ownerWrapper.IsEmpty()) { Does this over the case of getElementsByTagName? For that case, we probably don't want to add an implicit reference, right? Or does that actually always return the same object?
Erik Arvidsson
Comment 3 2012-06-28 14:35:42 PDT
Erik Arvidsson
Comment 4 2012-06-28 14:37:27 PDT
This now tests all DynamicNodeLists (except MicroDataItemList because it is not built by default). The V8 FAIL is due to 90208
Erik Arvidsson
Comment 5 2012-06-28 15:32:53 PDT
Created attachment 150025 [details] Patch for landing
WebKit Review Bot
Comment 6 2012-06-28 18:14:03 PDT
Comment on attachment 150025 [details] Patch for landing Clearing flags on attachment: 150025 Committed r121496: <http://trac.webkit.org/changeset/121496>
WebKit Review Bot
Comment 7 2012-06-28 18:14:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.