[V8] NodeList wrappers are not kept alive as needed https://bugs.webkit.org/show_bug.cgi?id=90194

Reviewed by Ojan Vafai.

Source/WebCore:

We need to add custom reachability code for DynamicNodeLists. If the owner of
a DynamicNodeList is reachable then the DynamicNodeList must also be reachable.

Test: fast/dom/NodeList/nodelist-reachable.html

* bindings/v8/custom/V8NodeListCustom.cpp:
(WebCore::V8NodeList::visitDOMWrapper): AddImplicitReferences from the owner wrapper.
(WebCore):
* dom/NodeList.idl:

LayoutTests:

* fast/dom/NodeList/nodelist-reachable-expected.txt: Added.
* fast/dom/NodeList/nodelist-reachable.html: Added.
* platform/chromium/fast/dom/NodeList/nodelist-reachable-expected.txt: Added.


Canonical link: https://commits.webkit.org/108063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121496 268f45cc-cd09-0410-ab3c-d52691b4dbfc